style: notification and message icon for action bar

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,12 +15,12 @@
             android:id="@+id/locationET"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="45dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="30dp"
+            android:layout_marginEnd="45dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name"
+            android:text="Enter Destination"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name"
+            android:text="Select Date"
             app:layout_constraintEnd_toEndOf="@+id/locationET"
             app:layout_constraintStart_toStartOf="@+id/locationET"
             app:layout_constraintTop_toBottomOf="@+id/locationET" />
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name"
+            android:text="Select room information"
             app:layout_constraintEnd_toEndOf="@+id/dateET"
             app:layout_constraintStart_toStartOf="@+id/dateET"
             app:layout_constraintTop_toBottomOf="@+id/dateET" />
