--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -102,13 +102,15 @@
         android:id="@+id/signOutBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="#FFFFFF"
+        android:drawableLeft="@drawable/ic_logout"
+        android:gravity="left|center_vertical"
         android:text="Sign Out"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:backgroundTint="#EE4B2B"
-        android:gravity="left|center_vertical"
-        android:drawableLeft="@drawable/ic_logout"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/myBookingBtn" />
 
