--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -53,7 +53,7 @@
         android:text="Sign Up"
         android:textAllCaps="false"
         android:textColor="#ffffff"
-        android:background="#42A5F5"
+        android:background="#003580"
 
 
         app:layout_constraintEnd_toEndOf="@+id/inputPasswordEt"
