--- a/app/src/main/res/layout/room_information_bottom_sheet.xml
+++ b/app/src/main/res/layout/room_information_bottom_sheet.xml
@@ -7,6 +7,78 @@
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <TextView
+        android:id="@+id/childLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/child_minus_btn"
+        app:layout_constraintEnd_toEndOf="@+id/adultLabel"
+        app:layout_constraintStart_toStartOf="@+id/adultLabel"
+        app:layout_constraintTop_toTopOf="@+id/child_minus_btn" />
+
+    <Button
+        android:id="@+id/child_add_btn"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:cornerRadius="50dp"
+        app:icon="@drawable/ic_plus"
+        app:iconGravity="textStart"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/child_minus_btn"
+        app:layout_constraintStart_toStartOf="@+id/adult_add_btn" />
+
+    <Button
+        android:id="@+id/child_minus_btn"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:cornerRadius="50dp"
+        app:icon="@drawable/ic_minus"
+        app:iconGravity="textStart"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="@+id/adult_minus_btn"
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
+
+    <Button
+        android:id="@+id/adult_add_btn"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:cornerRadius="50dp"
+        app:icon="@drawable/ic_plus"
+        app:iconGravity="textStart"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/adult_minus_btn"
+        app:layout_constraintStart_toStartOf="@+id/room_add_btn" />
+
+    <TextView
+        android:id="@+id/adultLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/adult_minus_btn"
+        app:layout_constraintEnd_toEndOf="@+id/roomLabel"
+        app:layout_constraintStart_toStartOf="@+id/roomLabel"
+        app:layout_constraintTop_toTopOf="@+id/adult_minus_btn" />
+
+    <Button
+        android:id="@+id/adult_minus_btn"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:cornerRadius="50dp"
+        app:icon="@drawable/ic_minus"
+        app:iconGravity="textStart"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/room_minus_btn"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
+
+    <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,39 +104,81 @@
         android:id="@+id/room_add_btn"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="50dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginEnd="15dp"
-        app:cornerRadius="10dp"
-        app:strokeColor = "#00BCD4"
+        app:cornerRadius="50dp"
         app:icon="@drawable/ic_plus"
         app:iconGravity="textStart"
+        app:iconPadding="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView7" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/roomLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:text="0"
+        android:text="1"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/room_add_btn"
         app:layout_constraintEnd_toStartOf="@+id/room_add_btn"
+        app:layout_constraintStart_toEndOf="@+id/room_minus_btn"
         app:layout_constraintTop_toTopOf="@+id/room_add_btn" />
 
     <Button
         android:id="@+id/room_minus_btn"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        app:cornerRadius="10dp"
-        app:icon="@drawable/ic_plus"
+        android:layout_height="50dp"
+        android:layout_marginEnd="60dp"
+        app:cornerRadius="50dp"
+        app:icon="@drawable/ic_minus"
         app:iconGravity="textStart"
-        app:layout_constraintEnd_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toTopOf="@+id/room_add_btn"
-        app:strokeColor="#00BCD4" />
+        app:iconPadding="0dp"
+        app:layout_constraintEnd_toStartOf="@+id/room_add_btn"
+        app:layout_constraintTop_toTopOf="@+id/room_add_btn" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:text="Adult(s)"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:text="Children"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="Maximum 8 years old"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <Button
+        android:id="@+id/applyBtn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="20dp"
+        android:text="Apply"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
