--- a/app/src/main/res/layout/room_information_bottom_sheet.xml
+++ b/app/src/main/res/layout/room_information_bottom_sheet.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+    android:background="@drawable/custom_bottom_sheet_layout">
 
     <TextView
         android:id="@+id/childLabel"
