refactor: re-style profile fragment

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,6 +20,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileFragment">
@@ -44,45 +45,45 @@
 
     <Button
         android:id="@+id/myReviewBtn"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="#FFFFFF"
+        android:drawableLeft="@drawable/ic_review_outline"
+        android:gravity="left|center_vertical"
         android:text="Reviews"
         android:textAllCaps="false"
         android:textColor="#000000"
-        android:backgroundTint="#FFFFFF"
-        android:gravity="left|center_vertical"
-        style="?android:attr/borderlessButtonStyle"
-        android:drawableLeft="@drawable/ic_review_outline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewProfileBtn" />
 
     <Button
         android:id="@+id/helpMeBtn"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="#FFFFFF"
+        android:drawableLeft="@drawable/ic_help_outline"
+        android:gravity="left|center_vertical"
         android:text="Help &amp; Information"
         android:textAllCaps="false"
         android:textColor="#000000"
-        android:backgroundTint="#FFFFFF"
-        style="?android:attr/borderlessButtonStyle"
-        android:drawableLeft="@drawable/ic_help_outline"
-        android:gravity="left|center_vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/myReviewBtn" />
 
     <Button
         android:id="@+id/myBookingBtn"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="#FFFFFF"
+        android:drawableLeft="@drawable/ic_order_approve"
+        android:gravity="left|center_vertical"
         android:text="My Bookings"
         android:textAllCaps="false"
         android:textColor="#000000"
-        android:backgroundTint="#FFFFFF"
-        style="?android:attr/borderlessButtonStyle"
-        android:drawableLeft="@drawable/ic_order_approve"
-        android:gravity="left|center_vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/helpMeBtn" />
@@ -91,12 +92,12 @@
         android:id="@+id/signOutBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="#EE4B2B"
+        android:drawableLeft="@drawable/ic_logout"
+        android:gravity="left|center_vertical"
         android:text="Sign Out"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:backgroundTint="#EE4B2B"
-        android:gravity="left|center_vertical"
-        android:drawableLeft="@drawable/ic_logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/myBookingBtn" />
