--- a/app/src/main/res/layout/fragment_login_user.xml
+++ b/app/src/main/res/layout/fragment_login_user.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".AnonymousUser"
     android:background="@color/primary">
 
     <LinearLayout
@@ -31,40 +30,24 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif"
             android:gravity="center"
-            android:text="Become a member and enjoy benefits"
+            android:text="Welcome,"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/nameTV"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/loginProfileBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/white"
-                android:textAllCaps="false"
-                android:backgroundTint="#42A5F5"
-                android:layout_marginVertical="10dp"
-                android:layout_marginHorizontal="20dp"
-                android:text="Login" />
-
-            <Button
-                android:id="@+id/signupProfileBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:textAllCaps="false"
-                android:textColor="#42A5F5"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="10dp"
-                android:layout_weight="1"
-                android:text="Register" />
-        </LinearLayout>
+            android:textSize="25sp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:text="hello@gmail.com" />
 
 
     </LinearLayout>
+
 </FrameLayout>
