refactor: merge google signin feat

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,7 +94,7 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="244dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,18 +103,22 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/logInWithGGBtn"
-            android:layout_width="match_parent"
+            android:layout_width="298dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="#FFFFFF"
+            android:layout_gravity="center"
+            android:backgroundTint="#FFF"
             android:gravity="center"
-            android:text="Continue With Google"
+            android:text="Sign in wth Google"
             android:textAllCaps="false"
-            android:textColor="#000000"
+            android:textColor="#000"
+            app:cornerRadius="30dp"
             app:icon="@drawable/ic_google"
             app:iconGravity="textStart"
             app:iconPadding="10dp"
             app:iconTint="@android:color/transparent"
-            app:iconTintMode="add" />
+            app:iconTintMode="add"
+            app:strokeColor="@color/primary"
+            app:strokeWidth="1dp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
